devops/cd/k8s/base/storefront/service.yml
apiVersion: v1
kind: Service
metadata:
  name: storefront-service
  namespace: frontend-stg
spec:
  type: NodePort
  selector:
    app: storefront
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30080
